# SRC_Generator

./: CMakeLists.txt  Cross_Sections.cpp  MF_generator.cpp  Nuclear_Info.cpp  Nuclear_Info_MF.cpp  README.md  e2a_He4_4461_2250_e.root  gen_weight.cpp  gen_weight_MF_ui.cpp  gen_weight_ui.cpp  smearTree.cpp  spectral_interpolation.cpp
Andrew/: CMakeLists.txt  pMissReader.cpp  src_reader.cpp  tritiumHists.cpp  xqClas.cpp
Axel/: CMakeLists.txt  fomin.cpp
Mean_Field_Generator/: .#Invert_Matrix.cpp  .#spec_find.cpp  CMakeLists.txt  MF_generator.cpp  Makefile  histograms.cpp  spectral_interpolation.cpp
cmake_modules/: FindROOT.cmake
helpers/: CMakeLists.txt
include/: Cross_Sections.h  Nuclear_Info.h  Nuclear_Info_MF.h  SSN4.csv  SSP4.csv  constants.h  detectors.h  helpers.h  spectral_interpolation.h  spectral_interpolation.h~
plotting/: CMakeLists.txt  Korover_HallA_hists.cpp  Shneor_HallA_hists.cpp
simulator/: CMakeLists.txt  Korover_HallA_sim.cpp  Shneor_HallA_sim.cpp  detectors.cpp
